REFACTOR: Refactor format html

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -70,20 +70,20 @@
      main
     --------------------->
   <main class="main">
-    <!-- introduce -->
-    <section class="main-introduce pt-3 pt-lg-5 pb-3">
-      <div class="container">
-        <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
-          <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
-            <a class="text-black">Choose the right plan</a> for your business
-          </h1>
-          <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
-            Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch
-            between plans at any time.
-          </p>
-        </div>
-      </div>
-    </section>
+        <!-- introduce -->
+        <section class="main-introduce pt-3 pt-lg-5 pb-3">
+          <div class="container">
+              <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
+                  <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
+                      <a class="text-black">Choose the right plan</a> for your business
+                  </h1>
+                  <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
+                      Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch
+                      between plans at any time.
+                  </p>
+              </div>
+          </div>
+      </section>
     <!--Choose type plan  -->
     <section class="package pt-3 pt-lg-5 pb-3">
       <!-- plan-card -->
@@ -207,7 +207,7 @@
                   </li>
                   <li class="mb-3 d-flex align-items-center">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
-                    <p>10 Nodes Per Campaignn</p>
+                    <p>10 Nodes Per Campaigns</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
                     <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
