Feat : Update package-help

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -78,8 +78,8 @@
                       <a class="text-black">Choose the right plan</a> for your business
                   </h1>
                   <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
-                      Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch
-                      between plans at any time.
+                    Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch
+                    between plans at any time.
                   </p>
               </div>
           </div>
@@ -312,15 +312,17 @@
         </div>
       </article>
         <!-- need help -->
-        <article class="plan-help pb-5">
+        <div class="package-help pb-5">
             <div class="container">
-                <div class="row mb-5">
-                    <h3 class="display-3 mb-3">Need help choosing the right plan?</h3>
-                    <button class="w-100 btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
-                    <button class="w-100 btn btn-sm p-2 btn-secondary">Compare plans</button>
+                <div class="row row-cols-lg-2">
+                    <h3 class="row-cols-lg-6 display-3 mb-3">Need help choosing the right plan?</h3>
+                    <div class="button row-cols-lg-6 d-lg-flex">
+                        <button class="w-100 btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
+                        <button class="w-100 btn btn-sm p-2 btn-secondary">Compare plans</button>
+                    </div>
                 </div>
             </div>
-        </article>
+        </div>
     </section>
 
     <!-- Asked question -->
