Feat : Update package-help

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -314,10 +314,12 @@
         <div class="package-help pb-5">
             <div class="container">
                 <div class="row row-cols-lg-2">
-                    <h3 class="row-cols-lg-6 display-3 mb-3">Need help choosing the right plan?</h3>
-                    <div class="button row-cols-lg-6 d-lg-flex">
-                        <button class="w-100 btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
-                        <button class="w-100 btn btn-sm p-2 btn-secondary">Compare plans</button>
+                    <div class="cols-lg-6">
+                        <h3 class="display-3 mb-3">Need help choosing the right plan?</h3>
+                    </div>
+                    <div class="cols-lg-3 d-lg-flex">
+                        <button class="btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
+                        <button class="btn btn-sm p-2 btn-secondary">Compare plans</button>
                     </div>
                 </div>
             </div>
