Feat : Update package-help

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -311,19 +311,19 @@
         </div>
       </article>
         <!-- need help -->
-        <div class="package-help pb-5">
+        <article class="package-help pb-5">
             <div class="container">
-                <div class="row row-cols-lg-2">
-                    <div class="cols-lg-6">
-                        <h3 class="display-3 mb-3">Need help choosing the right plan?</h3>
+                <div class="row-cols-lg-auto d-lg-flex justify-content-around ">
+                    <div class="col ">
+                        <h3 class="display-3 mb-3 mb-lg-0">Need help choosing the right plan?</h3>
                     </div>
-                    <div class="cols-lg-3 d-lg-flex">
-                        <button class="btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
-                        <button class="btn btn-sm p-2 btn-secondary">Compare plans</button>
+                    <div class="col d-lg-flex ">
+                        <button class="btn btn-sm p-2 mb-3 mb-lg-0 btn-primary">Contact sales</button>
+                        <button class="btn btn-sm p-2 ms-lg-4 btn-secondary">Compare plans</button>
                     </div>
                 </div>
             </div>
-        </div>
+        </article>>
     </section>
 
     <!-- Asked question -->
