Feat : Update folder practice-03

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -327,7 +327,7 @@
     </section>
 
     <!-- Asked question -->
-    <section class="question">
+    <section class="question pt-3 pt-lg-5 pb-3">
         <div class="container">
             <article class="question-article">
                 <h2 class="display-2 mt-5 mb-4">Frequently asked questions</h2>
