--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -329,8 +329,8 @@
     <!-- Asked question -->
     <section class="question pt-3 pt-lg-5 pb-3">
         <div class="container">
-            <article class="question-article">
-                <h2 class="display-2 mt-5 mb-4">Frequently asked questions</h2>
+            <h2 class="display-2  mt-5 mb-4">Frequently asked questions</h2>
+            <article class="question-article d-lg-flex flex-lg-column  align-items-lg-end">
                 <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                         <h4 class="accordion-header" id="panelsStayOpen-headingOne">
