Fix : Fix grid system package

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -313,23 +313,23 @@
         <!-- need help -->
         <article class="package-help pb-5">
             <div class="container">
-                <div class="row-cols-lg-auto d-lg-flex justify-content-around ">
-                    <div class="col ">
+                <div class="row row-cols-lg-auto d-lg-flex justify-content-around ">
+                    <div class="col col-lg-auto ">
                         <h3 class="display-3 mb-3 mb-lg-0">Need help choosing the right plan?</h3>
                     </div>
-                    <div class="col d-lg-flex ">
-                        <button class="btn btn-sm p-2 mb-3 mb-lg-0 btn-primary">Contact sales</button>
-                        <button class="btn btn-sm p-2 ms-lg-4 btn-secondary">Compare plans</button>
+                    <div class="col-12 col-lg-auto d-lg-flex ">
+                        <button class="col-12 btn btn-sm p-2 mb-3 mb-lg-0 btn-primary">Contact sales</button>
+                        <button class="col-12 btn btn-sm p-2 ms-lg-4 btn-secondary">Compare plans</button>
                     </div>
                 </div>
             </div>
-        </article>>
+        </article>
     </section>
 
     <!-- Asked question -->
     <section class="question pt-3 pt-lg-5 pb-3">
         <div class="container">
-            <h2 class="display-2  mt-5 mb-4">Frequently asked questions</h2>
+            <h2 class="display-2 mt-5 mb-4">Frequently asked questions</h2>
             <article class="question-article d-lg-flex flex-lg-column  align-items-lg-end">
                 <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
@@ -445,6 +445,39 @@
 
   <!-------------------
      main end
+    --------------------->
+
+  <!-------------------
+     footer
+    --------------------->
+<footer class="footer pt-3 pt-lg-5 pb-3">
+    <!-- CTA -->
+    <section class="cta">
+        <div class="cta-content pb-5">
+            <div class="container">
+                <h1 class="display-1" href="#">
+                    <a href="#" class="text-white">
+                        Ready to supercharge your business?
+                    </a>
+                </h1>
+                <p class="fs-5 text-white-50 pt-3 text-md">
+                    Ask about Yoora products, pricing, implementation, or anything else.
+                    Our highly trained reps are standing by, ready to help.
+                </p>
+            </div>
+        </div>
+        <div class="cta-button d-flex justify-content-center align-items-center">
+            <button class="btn btn-primary">
+                Try For Free
+            </button>
+            <span class="text-sm text-white pt-4">Full access. No credit card required.</span>
+        </div>
+    </section>
+</footer>
+
+
+  <!-------------------
+     footer end
     --------------------->
   <!-- Script -->
 
