--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -314,12 +314,12 @@
       <article class="package-help pb-5">
         <div class="container">
           <div class="row row-cols-lg-auto d-lg-flex justify-content-around ">
-            <div class="col col-lg-auto ">
+            <div class="col-12 col-lg-auto ">
               <h3 class="display-3 mb-3 mb-lg-0">Need help choosing the right plan?</h3>
             </div>
             <div class="col-12 col-lg-auto d-lg-flex ">
-              <button class="col-12 btn btn-sm p-2 mb-3 mb-lg-0 btn-primary">Contact sales</button>
-              <button class="col-12 btn btn-sm p-2 ms-lg-4 btn-secondary">Compare plans</button>
+              <button class="col-12 btn btn-sm btn-primary p-2 mb-3 mb-lg-0 ">Contact sales</button>
+              <button class="col-12 btn btn-sm btn-secondary p-2 ms-lg-4 ">Compare plans</button>
             </div>
           </div>
         </div>
