style : update class bootstrap

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -313,7 +313,7 @@
       <!-- need help -->
       <article class="package-help pb-5">
         <div class="container">
-          <div class="row row-cols-lg-auto d-lg-flex justify-content-around ">
+          <div class="row row-cols-lg-2 d-lg-flex justify-content-around ">
             <div class="col-12 col-lg-auto ">
               <h3 class="display-3 mb-3 mb-lg-0">Need help choosing the right plan?</h3>
             </div>
