--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -408,29 +408,30 @@
      footer
     --------------------->
     <footer class="footer pt-3 pt-lg-5 pb-3">
-        <!-- CTA -->
-        <section class="cta row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
-            <div class="col col-lg-6 ">
-                <div class="cta-content p-4 pt-4">
-                    <h1 class="display-1" href="#">
-                        <a href="#" class="text-white">
-                            Ready to supercharge your business?
-                        </a>
-                    </h1>
-                    <p class="fs-5 text-white-50 pt-3 text-md">
-                        Ask about Yoora products, pricing, implementation, or anything else.
-                        Our highly trained reps are standing by, ready to help.
-                    </p>
-                </div>
+      <!-- CTA -->
+      <section class="cta d-lg-flex justify-content-center align-items-md-center">
+        <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
+          <div class="col col-lg-8">
+            <div class="cta-content">
+              <h1 class="display-1" href="#">
+                <a href="#" class="text-white">
+                  Ready to supercharge your business?
+                </a>
+              </h1>
+              <p class="fs-5 text-white-50 pt-3 text-md">
+                Ask about Yoora products, pricing, implementation, or anything else.
+                Our highly trained reps are standing by, ready to help.
+              </p>
             </div>
-            <div class="cta-button col-12 col-lg-6 d-flex justify-content-center align-items-center">
-                <button class="btn btn-primary">
-                    Try For Free
-                </button>
-                <span class="fs-6  text-white pt-4">Full access. No credit card required.</span>
-            </div>
-
-        </section>
+          </div>
+          <div class="cta-button col-12 col-lg-3 d-flex justify-content-center align-items-center">
+            <button class="btn btn-primary">
+              Try For Free
+            </button>
+            <span class="fs-6 text-white pt-4">Full access. No credit card required.</span>
+          </div>
+        </div>
+      </section>
     </footer>
 
 
