Feat : update footer-responsive

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -330,7 +330,7 @@
         <!-- Asked question -->
         <section class="question pt-3 pt-lg-5 pb-3">
             <div class="container">
-                <h2 class="display-2 mt-5 mb-4">Frequently asked questions</h2>
+                <h2 class="display-1 mt-5 mb-4">Frequently asked questions</h2>
                 <article class="question-article d-lg-flex flex-lg-column  align-items-lg-end">
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
@@ -429,6 +429,101 @@
               Try For Free
             </button>
             <span class="fs-6 text-white pt-4">Full access. No credit card required.</span>
+          </div>
+        </div>
+      </section>
+      <section class="navigation mt-5">
+        <div class="container">
+          <div class="row row-cols-lg-3">
+            <div class="col-12 col-lg-4">
+              <div class="card p-0">
+                <div class="card-header mt-3 mt-lg-0">
+                  <a href="#" class="logo">
+                    <img src="./img/logo.png" alt="logo">
+                  </a>
+                </div>
+                <div class="card-body mt-3">
+                  <p class="fs-6">
+                    We built an elegant solution.<br> Our team created a fully integrated sales<br> and marketing solution for SMBs
+                  </p>
+                </div>
+                <div class="card-footer mt-3">
+                  <ul class="d-flex ">
+                    <li>
+                      <a class="me-3" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above"></a>
+                    </li>
+                    <li>
+                      <a class="me-3" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above"></a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above"></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-8 mt-5 mt-lg-0 ">
+              <div class="row row-cols-3 gap-5 gap-lg-0 justify-content-lg-between flex-lg-nowrap mb-lg-5">
+                <ul class="col-12 row gap-3 flex-lg-column w-auto">
+                  <a href="#" class="fs-5">Company</a>
+                  <li><a class="fs-6" href="#">About</a></li>
+                  <li><a class="fs-6" href="#">Pricing</a></li>
+                  <li><a class="fs-6" href="#">Jobs</a></li>
+                  <li><a class="fs-6" href="#">Blog</a></li>
+                  <li><a class="fs-6" href="#">Careers</a></li>
+                </ul>
+                <ul class="col-12 cols-lg-3 row gap-3 flex-lg-column w-auto ">
+                  <a href="#" class="fs-5">Product</a>
+                  <li><a class="fs-6" href="#">Sales software</a></li>
+                  <li><a class="fs-6" href="#">Features</a></li>
+                  <li><a class="fs-6" href="#">Privacy and security</a></li>
+                  <li><a class="fs-6" href="#">Marketplace</a></li>
+                  <li><a class="fs-6" href="#">Status</a></li>
+                  <li><a class="fs-6" href="#">API</a></li>
+                </ul>
+                <ul class="col-12 cols-lg-3 row gap-3 flex-lg-column w-auto">
+                  <a href="#" class="fs-5">Discover</a>
+                  <li><a class="fs-6" href="#">Partner Program</a></li>
+                  <li><a class="fs-6" href="#">Get our newsletter</a></li>
+                  <li><a class="fs-6" href="#">Sales Pipeline Course</a></li>
+                  <li><a class="fs-6" href="#">What is CRM?</a></li>
+                  <li><a class="fs-6" href="#">CRM Comparison</a></li>
+                  <li><a class="fs-6" href="#">Resources</a></li>
+                </ul>
+                <ul class="col-12 cols-lg-3 row gap-3 flex-lg-column w-auto">
+                  <a href="#" class="fs-5">Help Center</a>
+                  <li><a class="fs-6" href="#">Community</a></li>
+                  <li><a class="fs-6" href="#">Knowledge Base</a></li>
+                  <li><a class="fs-6" href="#">Academy</a></li>
+                  <li><a class="fs-6" href="#">Support</a></li>
+                </ul>
+              </div>
+            </div>
+
+
+            <div class="col-12 col-lg-12 mt-2 ">
+            <hr class="divider mt-lg-5 mb-lg-5">
+
+              <div class="row row-cols-lg-3 align-items-center gap-4 gap-lg-0">
+                <div class="col-12 col-lg-4">
+                  <h3 class="fs-6 ">
+                    <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                  </h3>
+                </div>
+                <ul class="col-12 col-lg-4 row gap-3 d-lg-flex flex-nowrap ">
+                  <li class="w-auto"><a class="fs-6" href="#">Terms of Service</a></li>
+                  <li class="w-auto"><a class="fs-6" href="#">Privacy Police</a></li>
+                  <li class="w-auto"><a class="fs-6" href="#">Cookie</a></li>
+                </ul>
+                <div class="col-12 col-lg-4 d-flex justify-content-end ">
+                  <i class="bi bi-globe2"></i>
+                  <select class="btn p-0" name="language" id="language">
+                    <option value="volvo">English</option>
+                    <option value="saab">Vietnamese</option>
+                  </select>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
