REFACTOR: Refactor format accordion

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -329,8 +329,9 @@
     <!-- Asked question -->
     <section class="question pt-3 pt-lg-5 pb-3">
       <div class="container">
-          <h2 class="display-1 mt-5 mb-4">Frequently asked questions</h2>
-          <article class="question-article d-lg-flex flex-lg-column  align-items-lg-end">
+        <div class="row">
+          <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
+          <article class="question-article col-12 d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                   <div class="accordion-item">
                       <h4 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -395,6 +396,8 @@
                   </div>
               </div>
           </article>
+        </div>
+
       </div>
   </section>
   </main>
