REFACTOR: Refactor format accordion

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -331,7 +331,7 @@
       <div class="container">
         <div class="row">
           <h2 class="col-12 display-1 mt-5 mb-4">Frequently asked questions</h2>
-          <article class="question-article col-12 d-lg-flex flex-lg-column align-items-lg-end">
+          <article class="question-article col d-lg-flex flex-lg-column align-items-lg-end">
               <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                   <div class="accordion-item">
                       <h4 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -397,8 +397,7 @@
               </div>
           </article>
         </div>
-
-      </div>
+    </div>
   </section>
   </main>
 
